--- a/src/input.css
+++ b/src/input.css
@@ -6,7 +6,10 @@
   --luxury-black: #060D0D;
   --fish-blue: #0282ca;
   --fish-red: #ff4d4d;
-  --fish-sky-blue: rgb(231,249,255);
+  --fish-sky-blue: #e7f9ff;
+  --fish-pink: #FF8880;
+  --fish-yellow: #EED466;
+  --fish-brown: #D4C29B;
   --line-color: #d2d2d2;
 }
 body{
@@ -32,8 +35,8 @@ body{
 /*----------------inTopbar----------------*/
 
 header{
-  @apply flex justify-center bg-white;
-  height: 120px;
+  @apply flex justify-center bg-white p-2;
+  height: 136px;
   width: 100%;
 }
 /*----------------inHeader----------------*/
@@ -66,7 +69,7 @@ header{
 /*----------------inHeader----------------*/
 
 nav{
-  @apply flex justify-center bg-[var(--fish-blue)] text-[var(--luxury-white)];
+  @apply flex justify-center bg-[var(--fish-blue)] text-[var(--luxury-white)] sticky top-0 z-50;
   height: 55px;
   width: 100%;
 }
@@ -88,11 +91,11 @@ nav{
 
 section.hero{
   @apply flex justify-center bg-[var(--fish-sky-blue)];
-  background-image: url("assets/banner.jpg");
+  background-image: url("assets/herobg.png");
   background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  height: 700px;
+  background-position: bottom;
+  background-size:cover;
+  height: 750px;
 }
 
 /*----------------inHero----------------*/
@@ -109,4 +112,41 @@ section.hero{
 .fish-image span{
   @apply absolute inset-0 flex items-center justify-end text-lg font-extrabold text-white pr-5 pt-1;
 }
+.hero-social{
+  @apply absolute flex flex-col gap-4 text-3xl text-[var(--luxury-black)];
+  top: 75%;
+  left: 2%;
+  transform: translateY(-50%);
+}
+.hero-product{
+  @apply flex flex-col items-end justify-end h-full relative;
+}
+.price-area{
+  @apply h-fit w-60 relative top-30 right-10 flex items-center justify-center;
+}
 /*----------------inHero----------------*/
+
+.features{
+  @apply flex justify-center;
+  font-family: 'Poppins', sans-serif;
+}
+
+/*----------------inFeatures----------------*/
+.feature-box{
+  @apply w-1/6 p-5 aspect-square flex flex-col items-center gap-5;
+}
+.feature-box span{
+  @apply text-xl font-medium;
+}
+.feature-cycle{
+  @apply rounded-full flex items-center justify-center border-10 bg-white;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+.feature-cycle img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+/*----------------inFeatures----------------*/
